[gd_scene load_steps=8 format=2]

[ext_resource path="res://src/UI/KOTAKkosongt.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/UI/LineEdit.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/scene/TTs.gd" type="Script" id=3]
[ext_resource path="res://src/UI/ItemInfo.tscn" type="PackedScene" id=4]
[ext_resource path="res://asset/bg/SL-043021-42650-28.jpg" type="Texture" id=5]
[ext_resource path="res://src/UI/basebutton.tscn" type="PackedScene" id=6]
[ext_resource path="res://src/button/Back.tscn" type="PackedScene" id=7]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
item_info = NodePath("ItemInfo")
question_file = "res://src/data/ttspengapian.json"
totalPertanyaan = 3

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 5 )
expand = true

[node name="GridContainer" type="GridContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -220.0
margin_top = -234.0
margin_right = 396.0
margin_bottom = 320.0
rect_min_size = Vector2( 25, 25 )
rect_scale = Vector2( 0.8, 0.8 )
columns = 9

[node name="Kotakisi" parent="GridContainer" groups=["M1"] instance=ExtResource( 2 )]

[node name="KotakKosong" parent="GridContainer" instance=ExtResource( 1 )]
margin_left = 62.0
margin_right = 120.0

[node name="KotakKosong9" parent="GridContainer" instance=ExtResource( 1 )]
margin_left = 124.0
margin_right = 182.0

[node name="KotakKosong2" parent="GridContainer" instance=ExtResource( 1 )]
margin_left = 186.0
margin_right = 244.0

[node name="KotakKosong3" parent="GridContainer" instance=ExtResource( 1 )]
margin_left = 248.0
margin_right = 306.0

[node name="KotakKosong4" parent="GridContainer" instance=ExtResource( 1 )]
margin_left = 310.0
margin_right = 368.0

[node name="KotakKosong5" parent="GridContainer" instance=ExtResource( 1 )]

[node name="KotakKosong6" parent="GridContainer" instance=ExtResource( 1 )]
margin_left = 434.0
margin_right = 492.0

[node name="KotakKosong7" parent="GridContainer" instance=ExtResource( 1 )]
margin_left = 496.0
margin_right = 554.0

[node name="Kotakisi2" parent="GridContainer" groups=["D1", "M1"] instance=ExtResource( 2 )]
margin_top = 62.0
margin_bottom = 120.0

[node name="Kotakisi4" parent="GridContainer" groups=["D1"] instance=ExtResource( 2 )]
margin_left = 62.0
margin_top = 62.0
margin_right = 120.0
margin_bottom = 120.0

[node name="Kotakisi5" parent="GridContainer" groups=["D1"] instance=ExtResource( 2 )]
margin_left = 124.0
margin_top = 62.0
margin_right = 182.0
margin_bottom = 120.0

[node name="KotakKosong8" parent="GridContainer" instance=ExtResource( 1 )]
margin_left = 186.0
margin_top = 62.0
margin_right = 244.0
margin_bottom = 120.0

[node name="KotakKosong10" parent="GridContainer" instance=ExtResource( 1 )]
margin_left = 248.0
margin_top = 62.0
margin_right = 306.0
margin_bottom = 120.0

[node name="KotakKosong14" parent="GridContainer" instance=ExtResource( 1 )]
margin_left = 310.0
margin_top = 62.0
margin_right = 368.0
margin_bottom = 120.0

[node name="KotakKosong11" parent="GridContainer" instance=ExtResource( 1 )]
margin_top = 62.0
margin_bottom = 120.0

[node name="KotakKosong12" parent="GridContainer" instance=ExtResource( 1 )]
margin_left = 434.0
margin_top = 62.0
margin_right = 492.0
margin_bottom = 120.0

[node name="KotakKosong13" parent="GridContainer" instance=ExtResource( 1 )]
margin_left = 496.0
margin_top = 62.0
margin_right = 554.0
margin_bottom = 120.0

[node name="Kotakisi3" parent="GridContainer" groups=["M1"] instance=ExtResource( 2 )]
margin_top = 124.0
margin_bottom = 182.0

[node name="KotakKosong15" parent="GridContainer" instance=ExtResource( 1 )]
margin_left = 62.0
margin_top = 124.0
margin_right = 120.0
margin_bottom = 182.0

[node name="KotakKosong16" parent="GridContainer" instance=ExtResource( 1 )]
margin_left = 124.0
margin_top = 124.0
margin_right = 182.0
margin_bottom = 182.0

[node name="KotakKosong17" parent="GridContainer" instance=ExtResource( 1 )]
margin_left = 186.0
margin_top = 124.0
margin_right = 244.0
margin_bottom = 182.0

[node name="KotakKosong18" parent="GridContainer" instance=ExtResource( 1 )]
margin_left = 248.0
margin_top = 124.0
margin_right = 306.0
margin_bottom = 182.0

[node name="Kotakisi6" parent="GridContainer" groups=["M3"] instance=ExtResource( 2 )]
margin_left = 310.0
margin_top = 124.0
margin_right = 368.0
margin_bottom = 182.0

[node name="KotakKosong20" parent="GridContainer" instance=ExtResource( 1 )]
margin_top = 124.0
margin_bottom = 182.0

[node name="KotakKosong21" parent="GridContainer" instance=ExtResource( 1 )]
margin_left = 434.0
margin_top = 124.0
margin_right = 492.0
margin_bottom = 182.0

[node name="KotakKosong24" parent="GridContainer" instance=ExtResource( 1 )]
margin_left = 496.0
margin_top = 124.0
margin_right = 554.0
margin_bottom = 182.0

[node name="Kotakisi7" parent="GridContainer" groups=["D2", "M1"] instance=ExtResource( 2 )]
margin_top = 186.0
margin_bottom = 244.0

[node name="Kotakisi8" parent="GridContainer" groups=["D2"] instance=ExtResource( 2 )]
margin_left = 62.0
margin_top = 186.0
margin_right = 120.0
margin_bottom = 244.0

[node name="Kotakisi9" parent="GridContainer" groups=["D2"] instance=ExtResource( 2 )]
margin_left = 124.0
margin_top = 186.0
margin_right = 182.0
margin_bottom = 244.0

[node name="Kotakisi10" parent="GridContainer" groups=["D2", "M2"] instance=ExtResource( 2 )]
margin_left = 186.0
margin_top = 186.0
margin_right = 244.0
margin_bottom = 244.0

[node name="Kotakisi11" parent="GridContainer" groups=["D2"] instance=ExtResource( 2 )]
margin_left = 248.0
margin_top = 186.0
margin_right = 306.0
margin_bottom = 244.0

[node name="Kotakisi12" parent="GridContainer" groups=["D2", "M3"] instance=ExtResource( 2 )]
margin_left = 310.0
margin_top = 186.0
margin_right = 368.0
margin_bottom = 244.0

[node name="Kotakisi13" parent="GridContainer" groups=["D2"] instance=ExtResource( 2 )]
margin_left = 372.0
margin_top = 186.0
margin_right = 430.0
margin_bottom = 244.0

[node name="KotakKosong22" parent="GridContainer" instance=ExtResource( 1 )]
margin_left = 434.0
margin_top = 186.0
margin_right = 492.0
margin_bottom = 244.0

[node name="KotakKosong23" parent="GridContainer" instance=ExtResource( 1 )]
margin_left = 496.0
margin_top = 186.0
margin_right = 554.0
margin_bottom = 244.0

[node name="Kotakisi14" parent="GridContainer" groups=["M1"] instance=ExtResource( 2 )]
margin_top = 248.0
margin_bottom = 306.0

[node name="KotakKosong25" parent="GridContainer" instance=ExtResource( 1 )]
margin_left = 62.0
margin_top = 248.0
margin_right = 120.0
margin_bottom = 306.0

[node name="KotakKosong26" parent="GridContainer" instance=ExtResource( 1 )]
margin_left = 124.0
margin_top = 248.0
margin_right = 182.0
margin_bottom = 306.0

[node name="Kotakisi15" parent="GridContainer" groups=["M2"] instance=ExtResource( 2 )]
margin_left = 186.0
margin_top = 248.0
margin_right = 244.0
margin_bottom = 306.0

[node name="KotakKosong28" parent="GridContainer" instance=ExtResource( 1 )]
margin_left = 248.0
margin_top = 248.0
margin_right = 306.0
margin_bottom = 306.0

[node name="Kotakisi16" parent="GridContainer" groups=["M3"] instance=ExtResource( 2 )]
margin_left = 310.0
margin_top = 248.0
margin_right = 368.0
margin_bottom = 306.0

[node name="KotakKosong27" parent="GridContainer" instance=ExtResource( 1 )]
margin_top = 248.0
margin_bottom = 306.0

[node name="KotakKosong29" parent="GridContainer" instance=ExtResource( 1 )]
margin_left = 434.0
margin_top = 248.0
margin_right = 492.0
margin_bottom = 306.0

[node name="KotakKosong30" parent="GridContainer" instance=ExtResource( 1 )]
margin_left = 496.0
margin_top = 248.0
margin_right = 554.0
margin_bottom = 306.0

[node name="Kotakisi17" parent="GridContainer" groups=["M1"] instance=ExtResource( 2 )]
margin_top = 310.0
margin_bottom = 368.0

[node name="KotakKosong31" parent="GridContainer" instance=ExtResource( 1 )]
margin_left = 62.0
margin_top = 310.0
margin_right = 120.0
margin_bottom = 368.0

[node name="KotakKosong32" parent="GridContainer" instance=ExtResource( 1 )]
margin_left = 124.0
margin_top = 310.0
margin_right = 182.0
margin_bottom = 368.0

[node name="Kotakisi18" parent="GridContainer" groups=["M2"] instance=ExtResource( 2 )]
margin_left = 186.0
margin_top = 310.0
margin_right = 244.0
margin_bottom = 368.0

[node name="KotakKosong33" parent="GridContainer" instance=ExtResource( 1 )]
margin_left = 248.0
margin_top = 310.0
margin_right = 306.0
margin_bottom = 368.0

[node name="Kotakisi19" parent="GridContainer" groups=["D3", "M3"] instance=ExtResource( 2 )]
margin_left = 310.0
margin_top = 310.0
margin_right = 368.0
margin_bottom = 368.0

[node name="Kotakisi20" parent="GridContainer" groups=["D3"] instance=ExtResource( 2 )]
margin_left = 372.0
margin_top = 310.0
margin_right = 430.0
margin_bottom = 368.0

[node name="Kotakisi21" parent="GridContainer" groups=["D3"] instance=ExtResource( 2 )]
margin_left = 434.0
margin_top = 310.0
margin_right = 492.0
margin_bottom = 368.0

[node name="Kotakisi22" parent="GridContainer" groups=["D3"] instance=ExtResource( 2 )]
margin_left = 496.0
margin_top = 310.0
margin_right = 554.0
margin_bottom = 368.0

[node name="Kotakisi23" parent="GridContainer" groups=["M1"] instance=ExtResource( 2 )]
margin_top = 372.0
margin_bottom = 430.0

[node name="KotakKosong34" parent="GridContainer" instance=ExtResource( 1 )]
margin_left = 62.0
margin_top = 372.0
margin_right = 120.0
margin_bottom = 430.0

[node name="KotakKosong35" parent="GridContainer" instance=ExtResource( 1 )]
margin_left = 124.0
margin_top = 372.0
margin_right = 182.0
margin_bottom = 430.0

[node name="Kotakisi24" parent="GridContainer" groups=["M2"] instance=ExtResource( 2 )]
margin_left = 186.0
margin_top = 372.0
margin_right = 244.0
margin_bottom = 430.0

[node name="KotakKosong36" parent="GridContainer" instance=ExtResource( 1 )]
margin_left = 248.0
margin_top = 372.0
margin_right = 306.0
margin_bottom = 430.0

[node name="Kotakisi25" parent="GridContainer" groups=["M3"] instance=ExtResource( 2 )]
margin_left = 310.0
margin_top = 372.0
margin_right = 368.0
margin_bottom = 430.0

[node name="KotakKosong37" parent="GridContainer" instance=ExtResource( 1 )]
margin_top = 372.0
margin_bottom = 430.0

[node name="KotakKosong38" parent="GridContainer" instance=ExtResource( 1 )]
margin_left = 434.0
margin_top = 372.0
margin_right = 492.0
margin_bottom = 430.0

[node name="KotakKosong39" parent="GridContainer" instance=ExtResource( 1 )]
margin_left = 496.0
margin_top = 372.0
margin_right = 554.0
margin_bottom = 430.0

[node name="KotakKosong40" parent="GridContainer" instance=ExtResource( 1 )]
margin_left = 0.0
margin_top = 434.0
margin_right = 58.0
margin_bottom = 492.0

[node name="KotakKosong41" parent="GridContainer" instance=ExtResource( 1 )]
margin_left = 62.0
margin_top = 434.0
margin_right = 120.0
margin_bottom = 492.0

[node name="KotakKosong42" parent="GridContainer" instance=ExtResource( 1 )]
margin_left = 124.0
margin_top = 434.0
margin_right = 182.0
margin_bottom = 492.0

[node name="Kotakisi26" parent="GridContainer" groups=["M2"] instance=ExtResource( 2 )]
margin_left = 186.0
margin_top = 434.0
margin_right = 244.0
margin_bottom = 492.0

[node name="KotakKosong43" parent="GridContainer" instance=ExtResource( 1 )]
margin_left = 248.0
margin_top = 434.0
margin_right = 306.0
margin_bottom = 492.0

[node name="Kotakisi27" parent="GridContainer" groups=["M3"] instance=ExtResource( 2 )]
margin_left = 310.0
margin_top = 434.0
margin_right = 368.0
margin_bottom = 492.0

[node name="KotakKosong44" parent="GridContainer" instance=ExtResource( 1 )]
margin_top = 434.0
margin_bottom = 492.0

[node name="KotakKosong45" parent="GridContainer" instance=ExtResource( 1 )]
margin_left = 434.0
margin_top = 434.0
margin_right = 492.0
margin_bottom = 492.0

[node name="KotakKosong46" parent="GridContainer" instance=ExtResource( 1 )]
margin_left = 496.0
margin_top = 434.0
margin_right = 554.0
margin_bottom = 492.0

[node name="KotakKosong48" parent="GridContainer" instance=ExtResource( 1 )]
margin_left = 0.0
margin_top = 496.0
margin_right = 58.0
margin_bottom = 554.0

[node name="KotakKosong49" parent="GridContainer" instance=ExtResource( 1 )]
margin_left = 62.0
margin_top = 496.0
margin_right = 120.0
margin_bottom = 554.0

[node name="KotakKosong50" parent="GridContainer" instance=ExtResource( 1 )]
margin_left = 124.0
margin_top = 496.0
margin_right = 182.0
margin_bottom = 554.0

[node name="Kotakisi28" parent="GridContainer" groups=["M2"] instance=ExtResource( 2 )]
margin_left = 186.0
margin_top = 496.0
margin_right = 244.0
margin_bottom = 554.0

[node name="KotakKosong51" parent="GridContainer" instance=ExtResource( 1 )]
margin_left = 248.0
margin_top = 496.0
margin_right = 306.0
margin_bottom = 554.0

[node name="Kotakisi29" parent="GridContainer" groups=["M3"] instance=ExtResource( 2 )]
margin_left = 310.0
margin_top = 496.0
margin_right = 368.0
margin_bottom = 554.0

[node name="KotakKosong52" parent="GridContainer" instance=ExtResource( 1 )]
margin_top = 496.0
margin_bottom = 554.0

[node name="KotakKosong53" parent="GridContainer" instance=ExtResource( 1 )]
margin_left = 434.0
margin_top = 496.0
margin_right = 492.0
margin_bottom = 554.0

[node name="KotakKosong54" parent="GridContainer" instance=ExtResource( 1 )]
margin_left = 496.0
margin_top = 496.0
margin_right = 554.0
margin_bottom = 554.0

[node name="Button" type="Button" parent="."]
visible = false
margin_left = 813.0
margin_top = 534.0
margin_right = 936.0
margin_bottom = 567.0
text = "cek"

[node name="ItemInfo" parent="." instance=ExtResource( 4 )]
visible = false

[node name="CEK" parent="." instance=ExtResource( 6 )]
margin_left = 757.0
margin_top = 522.0
margin_right = 1137.0
margin_bottom = 592.0
rect_scale = Vector2( 0.6, 0.7 )
text = "CEK JAWABAN"

[node name="Back" parent="." instance=ExtResource( 7 )]

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="CEK" to="." method="_on_CEK_pressed"]
[connection signal="pressed" from="Back" to="." method="_on_Back_pressed"]
